# ds-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality.yml  create-version-tag.yml  poetry.yml  pull_requests.yml
ds_toolkit/: lightfm.py  recommendations_utils.py  utils.py
sagemaker/lifecycle/: .condarc  bashrc  bashrc-studio.sh  create-persistent-conda-env.sh  custom-conda-on-start.sh  jupyter_notebook_config.py  jupyter_server_config.py  on-start-v1.sh  studio-jupyter-server-create-conda-envs.sh  studio-jupyter-server-lifecycle-template.sh  studio-jupyter-server-on-start.sh  studio-jupyter-server-setup-conda.sh  studio-kernel-gateway-setup-conda.sh
sagemaker/lifecycle/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
sagemaker/lifecycle/lab/user-settings/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
sagemaker/lifecycle/lab/workspaces/: default-37a8.jupyterlab-workspace
tests/: listing.json  rent_all_w.json  rent_m2_y.json  test_recommendation_utils.py  test_utils.py
