[tool.poetry]
name = "ds-toolkit"
version = "1.0.0"
description = "Utility package for SMG Real Estate DS team"
authors = ["Dmytro Yurchenko <dmytro.yurchenko@swissmarketplace.group>"]
license = "PROPRIETARY"
readme = "README.md"
packages = [{include = "ds_toolkit"}]

[tool.poetry.dependencies]
botocore = "^1.31.0"
geopy = "^2.4.0"
python = ">=3.8,<3.11"
numpy = "^1.24.0"
datadog = "^0.47.0"
scikit-learn = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = { extras = ["d"], version = "^23.10.0" }
pre-commit = "^3.5.0"
ruff = "^0.1.1"
pre-commit-hooks = "^4.5.0"
poethepoet = "^0.24.1"
pytest-mock = "^3.12.0"
pytest-env = "^0.6.2"
pytest-cov = "^2.12.1"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test-unit = "python3 -m pytest --color=yes --cov=ds_toolkit --cov-report xml ./tests"
format = "black ."
lint-all = "pre-commit run --all-files"

[tool.black]
line-length = 79
preview = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.pytest_cache
  | \.venv
  | \.cache
  | dist
)/
'''

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "-v"

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.coverage.run]
branch = true
omit = [
    "tests/*"
]
